--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Trigger ReproSchema to RedCap workflow
+name: Trigger Target Workflow
 
 on:
   push:
@@ -10,10 +10,20 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Trigger workflow to build ReproSchema from RedCap
+      - name: Message
         run: |
-          curl -X POST \
-            -H "Authorization: token ${{ secrets.B2AI_REDCAP2RS_PAT }}" \
-            -H "Accept: application/vnd.github.v3+json" \
-            https://api.github.com/repos/sensein/b2ai-redcap2rs/actions/workflows/deploy.yml/dispatches \
-            -d '{"ref":"main"}'
+          echo "Notifying reproschema repo"
+      - name: Trigger Workflow in Another Repository
+        uses: convictional/trigger-workflow-and-wait@v1.6.1
+        with:
+            owner: Evan8456
+            repo: b2ai-redcap2rs
+            github_token: ${{ secrets.B2AI_REDCAP2RS_PAT }}
+            workflow_file_name: deploy.yml
+            ref: main
+            wait_interval: 10
+            propagate_failure: false
+            trigger_workflow: true
+            wait_workflow: false
+
+  
