--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,18 +12,8 @@ jobs:
     steps:
       - name: Message
         run: |
-          echo "Notifying reproschema repo"
-      - name: Trigger Workflow in Another Repository
-        uses: convictional/trigger-workflow-and-wait@v1.6.1
-        with:
-            owner: Evan8456
-            repo: b2ai-redcap2rs
-            github_token: ${{ secrets.B2AI_REDCAP2RS_PAT }}
-            workflow_file_name: deploy.yml
-            ref: main
-            wait_interval: 10
-            propagate_failure: false
-            trigger_workflow: true
-            wait_workflow: false
-
-  
+          curl --request POST \
+          --header "Authorization: token ${{ secrets.B2AI_REDCAP2RS_PAT }}" \
+          --header "Accept: application/vnd.github.v3+json" \
+          --url https://api.github.com/repos/sensein/b2ai-redcap2rs/actions/workflows/deploy.yml/dispatches \
+          --data '{"ref":"main"}'
