--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Trigger Target Workflow
+name: Trigger ReproSchema to RedCap workflow
 
 on:
   push:
@@ -10,10 +10,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Message
+      - name: Trigger workflow to build ReproSchema from RedCap
         run: |
           curl --request POST \
           --header "Authorization: token ${{ secrets.B2AI_REDCAP2RS_PAT }}" \
           --header "Accept: application/vnd.github.v3+json" \
-          --url https://api.github.com/repos/Evan8456/b2ai-redcap2rs/actions/workflows/deploy.yml/dispatches \
+          --url https://api.github.com/repos/sensein/b2ai-redcap2rs/actions/workflows/deploy.yml/dispatches \
           --data '{"ref":"main"}'
